[project]
name = "simple-weather-agent"
version = "0.2.0"
description = "A simple weather agent demonstrating LLM function calling with Google Gemini"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
]
